fix dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -43,10 +43,6 @@ a {
   color: white;
 }
 
-/* .light {
-  background-color: white;
-  color: #282828; */
-
 .container {
   width: 100%;
   padding: 0 40px;
