--- a/src/components/CategoriesSection/CategoriesSection.module.css
+++ b/src/components/CategoriesSection/CategoriesSection.module.css
@@ -26,6 +26,12 @@
       box-shadow 0.3s;
   }
 
+  .dark .hidden_button button {
+    color: white;
+    background-color: #282828;
+    border: 1px solid #ffffff;
+  }
+
   .hidden_button button:active {
     transform: scale(0.95);
   }
